COMMIT CORRETTO, CE DA AGGIUSTARE LE CATEGORIE E I PRODOTTI CHE ME LI INSERISCE TUTTI I PRODOTTI DI UNA CATEGORIA.